Flex fix for left aligned logo

--- a/blocks/shared-styles/scss/_header-nav.scss
+++ b/blocks/shared-styles/scss/_header-nav.scss
@@ -202,6 +202,7 @@ body.nav-open {
 
   .nav-left {
     justify-content: flex-start;
+    flex-shrink: 0;
   }
 
   .nav-right {
